univention-bind (14.0.0-7) unstable; urgency=low

  * Bug #32188: Remove UCRV dns/master/port

 -- Philipp Hahn <hahn@univention.de>  Sat, 04 Jul 2020 10:35:30 +0200

univention-bind (14.0.0-6) unstable; urgency=medium

  * Bug #51421: simplify /etc/bind/rndc.key handling and service installation

 -- Jürn Brodersen <brodersen@univention.de>  Tue, 16 Jun 2020 12:39:26 +0200

univention-bind (14.0.0-5) unstable; urgency=medium

  * Bug #51421: Cleanup; fix systemd service recursion (2)

 -- Jürn Brodersen <brodersen@univention.de>  Tue, 16 Jun 2020 07:19:28 +0200

univention-bind (14.0.0-4) unstable; urgency=medium

  * Bug #51421: fix systemd service recursion

 -- Jürn Brodersen <brodersen@univention.de>  Mon, 15 Jun 2020 11:31:49 +0200

univention-bind (14.0.0-3) unstable; urgency=medium

  * Bug #51421: fix bind start

 -- Jürn Brodersen <brodersen@univention.de>  Thu, 04 Jun 2020 11:48:32 +0200

univention-bind (14.0.0-1) unstable; urgency=medium

  * Bug #51419: UCS 5: Version bump
  * Fix dpkg-divert'ing  the original bind service file

 -- Dirk Wiesenthal <wiesenthal@univention.de>  Thu, 04 Jun 2020 10:33:22 +0200

univention-bind (13.0.1-11) unstable; urgency=medium

  * Bug #50501: Correct ucv description.

 -- Tobias Wenzel <wenzel@univention.de>  Thu, 30 Apr 2020 09:13:07 +0200

univention-bind (13.0.1-10) unstable; urgency=medium

  * Bug #50499: add warning to dns/backend 

 -- Tobias Wenzel <wenzel@univention.de>  Tue, 28 Apr 2020 10:53:02 +0200

univention-bind (13.0.1-9) unstable; urgency=medium

  * Bug #51102: make UCR templates compatible to python3

 -- Florian Best <best@univention.de>  Tue, 14 Apr 2020 13:38:38 +0200

univention-bind (13.0.1-8) unstable; urgency=medium

  * Bug #50662: Made LDAP-Service start timeout configurable

 -- Max Christian Pohle <mpohle@univention.de>  Fri, 27 Mar 2020 10:02:25 +0100

univention-bind (13.0.1-7) unstable; urgency=low

  * Bug #49493: allow setting the maximum number of open sockets via UCR
